<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="singleRecordVM"
            type="com.example.lab7.addfragment.AddRecordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".addfragment.AddDataFragment"
        android:id="@+id/frameLayout">


        <EditText
            android:id="@+id/titleField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="59dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="34dp"
            android:ems="10"
            android:hint="@string/title"
            android:text="@={singleRecordVM.titleField}"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/descriptionField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/descriptionField"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="34dp"
            android:hint="@string/description"
            android:text="@={singleRecordVM.descriptionField}"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleField" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/categorySpinner"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:entries="@array/category_list"
            android:selectedItemPosition="@={singleRecordVM.categoryItemPosition}"
            app:layout_constraintEnd_toStartOf="@+id/prioritySpinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category_heading" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/prioritySpinner"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:entries="@array/importance_list"
            android:selectedItemPosition="@={singleRecordVM.priorityItemPosition}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/categorySpinner"
            app:layout_constraintTop_toBottomOf="@+id/priority_heading" />

        <Button
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="82dp"
            android:text="@string/add"
            android:onClick="@{() -> singleRecordVM.writeDataInBackground()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/categorySpinner" />

        <TextView
            android:id="@+id/category_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="37dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="19dp"
            android:text="@string/select_category"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/categorySpinner"
            app:layout_constraintEnd_toStartOf="@+id/priority_heading"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionField" />

        <TextView
            android:id="@+id/priority_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="86dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="19dp"
            android:text="@string/select_priority"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/prioritySpinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/category_heading"
            app:layout_constraintTop_toBottomOf="@+id/descriptionField" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
